--- a/rom_v1/dossier/protocol_subscriptions/index.html
+++ b/rom_v1/dossier/protocol_subscriptions/index.html
@@ -93,13 +93,9 @@
 
 <h3 id="when-no-dossierid-is-provided">When no <code>dossier_id</code> is provided</h3>
 
-<pre class="headers"><code>Status: 422 Unprocessable Entity</code></pre>
+<pre class="headers no-response"><code>Status: 404 Not Found</code></pre>
 
-<pre><code class="language-javascript"><span class="p">{</span>
-  <span class="s2">"errors"</span><span class="o">:</span> <span class="p">[</span>
-    <span class="s2">"Dossier id moet opgegeven zijn"</span>
-  <span class="p">]</span>
-<span class="p">}</span></code></pre>
+<pre><code>(no response body)</code></pre>
 
 <h2 id="start-a-protocol-subscription">Start a protocol subscription</h2>
 
@@ -152,13 +148,9 @@
 
 <h3 id="when-no-dossierid-is-provided-1">When no <code>dossier_id</code> is provided</h3>
 
-<pre class="headers"><code>Status: 422 Unprocessable Entity</code></pre>
+<pre class="headers no-response"><code>Status: 404 Not Found</code></pre>
 
-<pre><code class="language-javascript"><span class="p">{</span>
-  <span class="s2">"errors"</span><span class="o">:</span> <span class="p">[</span>
-    <span class="s2">"Dossier id moet opgegeven zijn"</span>
-  <span class="p">]</span>
-<span class="p">}</span></code></pre>
+<pre><code>(no response body)</code></pre>
 
 <h3 id="when-no-protocol-exists-with-the-protocolkey-provided">When no protocol exists with the <code>protocol_key</code> provided</h3>
 
@@ -216,24 +208,16 @@
 
 <h3 id="when-no-dossierid-is-provided-2">When no <code>dossier_id</code> is provided</h3>
 
-<pre class="headers"><code>Status: 422 Unprocessable Entity</code></pre>
+<pre class="headers no-response"><code>Status: 404 Not Found</code></pre>
 
-<pre><code class="language-javascript"><span class="p">{</span>
-  <span class="s2">"errors"</span><span class="o">:</span> <span class="p">[</span>
-    <span class="s2">"Dossier id moet opgegeven zijn"</span>
-  <span class="p">]</span>
-<span class="p">}</span></code></pre>
+<pre><code>(no response body)</code></pre>
 
 <h3 id="when-no-protocol-subscription-exists-with-the-given-id">When no protocol subscription exists with the given <code>id</code>
 </h3>
 
 <pre class="headers no-response"><code>Status: 404 Not Found</code></pre>
 
-<pre><code class="language-javascript"><span class="p">{</span>
-  <span class="s2">"errors"</span><span class="o">:</span> <span class="p">[</span>
-    <span class="s2">"Protocolabonnement met id 'id' niet gevonden"</span>
-  <span class="p">]</span>
-<span class="p">}</span></code></pre>
+<pre><code>(no response body)</code></pre>
     </div>
 
 		<div id="js-sidebar" class="sidebar-shell">
