--- a/rom_v1/dossier/fill_out_requests/index.html
+++ b/rom_v1/dossier/fill_out_requests/index.html
@@ -180,6 +180,7 @@ At opened/reminder/expired a callback is made to the callback url.</p>
       <span class="s2">"in_past"</span>
     <span class="p">],</span>
     <span class="s2">"questionnaire_keys"</span><span class="o">:</span> <span class="p">[</span>
+      <span class="s2">"blank"</span><span class="p">,</span>
       <span class="s2">"invalid"</span>
     <span class="p">]</span>
   <span class="p">}</span>
@@ -221,6 +222,7 @@ At opened/reminder/expired a callback is made to the callback url.</p>
             <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/rom_v1/dossier/">Dossier-specific data</a></h3>
             <ul class="js-guides">
               <li><a href="/developer/rom_v1/dossier/dossiers/">Dossiers</a></li>
+              <li><a href="/developer/rom_v1/dossier/fill_out_requests/">Fill Out Requests</a></li>
               <li><a href="/developer/rom_v1/dossier/fill_out_sessions/">Fill Out Sessions</a></li>
               <li><a href="/developer/rom_v1/dossier/protocol_subscriptions/">Protocol Subscriptions</a></li>
               <li><a href="/developer/rom_v1/dossier/responses/">Responses</a></li>
