--- a/rom_v1/dossier/fill_out_requests/index.html
+++ b/rom_v1/dossier/fill_out_requests/index.html
@@ -104,7 +104,7 @@ At opened/reminder/expired a callback is made to the callback url.</p>
 <tr>
 <td><code>callback_url</code></td>
       <td><code>string</code></td>
-      <td>url to call on events (see below).</td>
+      <td>URL to call on events (see below).</td>
     </tr>
 <tr>
 <td><code>reminders</code></td>
@@ -186,7 +186,7 @@ At opened/reminder/expired a callback is made to the callback url.</p>
   <span class="p">}</span>
 <span class="p">}</span></code></pre>
 
-<h3 id="when-no-dossierid-is-provide">When no dossier_id is provide</h3>
+<h3 id="when-no-dossierid-is-provided">When no dossier_id is provided</h3>
 
 <pre class="headers no-response"><code>Status: 404 Not Found</code></pre>
 
