--- a/rom_v1/dossier/responses/index.html
+++ b/rom_v1/dossier/responses/index.html
@@ -363,7 +363,7 @@
 <tr>
 <td><code>complete</code></td>
       <td><code>string</code></td>
-      <td>String indicating the percentage a questionnaire has been completed. Either ‘100%’ or  <code>null</code> when a questionnaire is fully completed.</td>
+      <td>String indicating the percentage a questionnaire has been completed. Either ‘100%’ or  <code>null</code> when a questionnaire is fully completed, depending on whether the questionnaire has a definition for ‘completeness’.</td>
     </tr>
 </tbody>
 </table>
