--- a/core_v1/authentication/oauth/index.html
+++ b/core_v1/authentication/oauth/index.html
@@ -36,7 +36,9 @@
     <h2>
       <strong>Core:</strong>
       OAuth Access Token
-      
+      <span class="status status-draft">
+          draft
+          </span>
     </h2>
 
     <ul>
