--- a/rom_v1/dossier/responses/index.html
+++ b/rom_v1/dossier/responses/index.html
@@ -36,7 +36,9 @@
 		<h2>
       <strong>ROM:</strong>
       Responses
-      
+      <span class="status status-final">
+          final
+          </span>
     </h2>
 
 		<ul>
