--- a/rom_v1/hl7/a19/index.html
+++ b/rom_v1/hl7/a19/index.html
@@ -36,7 +36,9 @@
 		<h2>
       <strong>ROM:</strong>
       HL7 2.4 QRY^A19 request
-      
+      <span class="status status-draft">
+          draft
+          </span>
     </h2>
 
 		<ul>
