--- a/rom_v1/hl7/oru/index.html
+++ b/rom_v1/hl7/oru/index.html
@@ -36,7 +36,9 @@
 		<h2>
       <strong>ROM:</strong>
       HL7 2.4 ORU
-      
+      <span class="status status-final">
+          final
+          </span>
     </h2>
 
 		<ul>
