--- a/quby_v1/what_is_quby/index.html
+++ b/quby_v1/what_is_quby/index.html
@@ -36,7 +36,9 @@
     <h2>
       <strong>Quby:</strong>
       
-      
+      <span class="status status-draft">
+          draft
+          </span>
     </h2>
 
     <ul>
