--- a/rom_v1/index.html
+++ b/rom_v1/index.html
@@ -36,7 +36,9 @@
 		<h2>
       <strong>ROM:</strong>
       API version 1
-      
+      <span class="status status-draft">
+          draft
+          </span>
     </h2>
 
 		<ul>
