--- a/rom_v1/sso/completing_questionnaires/index.html
+++ b/rom_v1/sso/completing_questionnaires/index.html
@@ -36,7 +36,9 @@
 		<h2>
       <strong>ROM:</strong>
       Single Sign-On for Respondents
-      
+      <span class="status status-draft">
+          draft
+          </span>
     </h2>
 
 		<ul>
