--- a/rom_v1/dossier/responses/index.html
+++ b/rom_v1/dossier/responses/index.html
@@ -109,7 +109,7 @@
 <tr>
 <td><code>status</code></td>
       <td><code>string</code></td>
-      <td>Request only responses where the <code>status</code> would equal the given value. Can be one of the values ‘completed’, ‘aborted, ‘open’ or ‘scheduled’.</td>
+      <td>[‘completed’, ‘aborted’, ‘open’, ‘scheduled’] Request only responses where the <code>status</code> would equal the given value.</td>
     </tr>
 </tbody>
 </table><h3 id="response-1">Response</h3>
