--- a/core/dossier/dossiers/index.html
+++ b/core/dossier/dossiers/index.html
@@ -47,15 +47,177 @@
 
   <div id="wrapper">
     <div class="content">
-      <h2 id="get-a-single-dossier">Get a single dossier</h2>
+      <h2 id="get-all-the-dossiers-the-user-has-access-to">Get all the dossiers the user has access to</h2>
 
-<pre><code>GET /api/v1/dossiers/:id
+<pre><code>GET /api/v1/dossiers
 </code></pre>
 
 <h3 id="response">Response</h3>
 
+<pre class="headers"><code>Status: 200 OK</code></pre>
+
 <pre><code class="language-javascript"><span class="p">{</span>
-  <span class="s2">"id"</span><span class="o">:</span> <span class="s2">"long-uuid"</span>
+  <span class="s2">"headers"</span><span class="o">:</span> <span class="p">[</span>
+    <span class="s2">"id"</span><span class="p">,</span>
+    <span class="s2">"birth_year"</span><span class="p">,</span>
+    <span class="s2">"gender"</span><span class="p">,</span>
+    <span class="s2">"firstname"</span><span class="p">,</span>
+    <span class="s2">"lastnameid"</span>
+  <span class="p">],</span>
+  <span class="s2">"rows"</span><span class="o">:</span> <span class="p">[</span>
+    <span class="p">[</span>
+      <span class="s2">"59abe42d-ad25-4273-95ef-86444705e8d3"</span><span class="p">,</span>
+      <span class="mi">1980</span><span class="p">,</span>
+      <span class="s2">"M"</span><span class="p">,</span>
+      <span class="s2">"john"</span><span class="p">,</span>
+      <span class="s2">"doe"</span>
+    <span class="p">]</span>
+  <span class="p">]</span>
+<span class="p">}</span></code></pre>
+
+<h2 id="search-for-dossiers">Search for dossiers</h2>
+
+<pre><code>GET /api/v1/dossiers?name=john+doe
+GET /api/v1/dossier_groups/:dossier_group_id/dossiers?external_identifier=some_id
+</code></pre>
+
+<p>When searching for a name, all the words need to match complete words in either in firstname or lastname, but order and casing is unimportant.</p>
+
+<p>When searching for external_identifier, the dossier_group must be specified, since they are only garanteed unique within a dossier_group.</p>
+
+<h3 id="response-1">Response</h3>
+
+<p>Same as index.</p>
+
+<h2 id="create-a-dossier">Create a dossier</h2>
+
+<pre><code>POST /api/v1/dossier_groups/:dossier_group_id/dossiers
+</code></pre>
+
+<h3 id="parameters">Parameters</h3>
+
+<table>
+<thead><tr>
+<th>Name</th>
+      <th>Type</th>
+      <th>Description</th>
+    </tr></thead>
+<tbody>
+<tr>
+<td><code>dossier</code></td>
+      <td><code>hash</code></td>
+      <td>Dossier info.</td>
+    </tr>
+<tr>
+<td><code>person</code></td>
+      <td><code>hash</code></td>
+      <td>Info of the person the dossier is about.</td>
+    </tr>
+</tbody>
+</table><h4 id="dossier-info">Dossier info</h4>
+
+<table>
+<thead><tr>
+<th>Name</th>
+      <th>Type</th>
+      <th>Description</th>
+    </tr></thead>
+<tbody><tr>
+<td><code>external_identifier</code></td>
+      <td><code>string</code></td>
+      <td>Id from epd or other source the patient is identified from.</td>
+    </tr></tbody>
+</table><h4 id="person-info">Person info</h4>
+
+<table>
+<thead><tr>
+<th>Name</th>
+      <th>Type</th>
+      <th>Description</th>
+    </tr></thead>
+<tbody>
+<tr>
+<td><code>firstname</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>lastname</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>initials</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>email</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>phone_home</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>phone_work</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>phone_cell</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>birthdate</code></td>
+      <td><code>string</code></td>
+      <td>‘1980-02-23’</td>
+    </tr>
+<tr>
+<td><code>gender</code></td>
+      <td><code>string</code></td>
+      <td>‘M’ for Male, ‘F’ for Female.</td>
+    </tr>
+<tr>
+<td><code>country_of_birth</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>street</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>city</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>zipcode</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>country</code></td>
+      <td><code>string</code></td>
+      <td> </td>
+    </tr>
+<tr>
+<td><code>subject_code</code></td>
+      <td><code>string</code></td>
+      <td>Code used for research to retrieve the anonymous data of the client.</td>
+    </tr>
+</tbody>
+</table><h3 id="response-2">Response</h3>
+
+<pre class="headers"><code>Status: 200 OK</code></pre>
+
+<pre><code class="language-javascript"><span class="p">{</span>
+  <span class="s2">"id"</span><span class="o">:</span> <span class="s2">"59abe42d-ad25-4273-95ef-86444705e8d3"</span>
 <span class="p">}</span></code></pre>
     </div>
 
