--- a/rom/dossier/protocol_subscriptions/index.html
+++ b/rom/dossier/protocol_subscriptions/index.html
@@ -133,7 +133,7 @@
 <tr>
 <td><code>flags</code></td>
       <td><code>hash</code></td>
-      <td>Flags that should be passed to the subscription’s answers. Defaults to no flags.</td>
+      <td>Boolean flags that are passed in when a questionnaire is being filled out.</td>
     </tr>
 </tbody>
 </table><h3 id="success-1">Success</h3>
